# io-scheduler

./: .cmake-format  .gitlab-ci.yml  CMakeLists.txt  COPYRIGHT_NOTICE  README.md
cli/: CMakeLists.txt  scord_adhoc.cpp  scord_ping.cpp  scord_query.cpp
etc/: CMakeLists.txt  scord-ctl.conf  scord-ctl.conf.in  scord.conf.in
etc/deploy_scripts/: CMakeLists.txt
examples/: ADM_adhoc_access.cpp  ADM_adhoc_background_flush.cpp  ADM_adhoc_context.cpp  ADM_adhoc_context_id.cpp  ADM_adhoc_distribution.cpp  ADM_adhoc_nodes.cpp  ADM_adhoc_walltime.cpp  ADM_cancel_transfer.cpp  ADM_connect_data_operation.cpp  ADM_define_data_operation.cpp  ADM_deploy_adhoc_storage.cpp  ADM_finalize_data_operation.cpp  ADM_get_pending_transfers.cpp  ADM_get_qos_constraints.cpp  ADM_get_statistics.cpp  ADM_get_transfer_priority.cpp  ADM_in_situ_ops.cpp  ADM_in_transit_ops.cpp  ADM_inout  ADM_inout.cpp  ADM_input  ADM_input.cpp  ADM_link_transfer_to_data_operation.cpp  ADM_output  ADM_output.cpp  ADM_register_adhoc_storage.cpp  ADM_register_job.cpp  ADM_remove_adhoc_storage.cpp  ADM_remove_job.cpp  ADM_set_dataset_information.cpp  ADM_set_io_resources.cpp  ADM_set_qos_constraints.cpp  ADM_set_qos_constraints_pull.cpp  ADM_set_qos_constraints_push.cpp  ADM_set_transfer_priority.cpp  ADM_transfer_dataset.cpp  ADM_update_adhoc_storage.cpp  CMakeLists.txt  CTestTestfile.cmake  ping  (+3 more)
examples/c/: ADM_cancel_transfer.c  ADM_connect_data_operation.c  ADM_define_data_operation.c  ADM_deploy_adhoc_storage.c  ADM_finalize_data_operation.c  ADM_get_pending_transfers.c  ADM_get_qos_constraints.c  ADM_get_statistics.c  ADM_get_transfer_priority.c  ADM_link_transfer_to_data_operation.c  ADM_ping.c  ADM_register_adhoc_storage.c  ADM_register_job.c  ADM_register_pfs_storage.c  ADM_remove_adhoc_storage.c  ADM_remove_job.c  ADM_remove_pfs_storage.c  ADM_set_dataset_information.c  ADM_set_io_resources.c  ADM_set_qos_constraints.c  ADM_set_transfer_priority.c  ADM_tear_down_adhoc_storage.c  ADM_terminate_adhoc_storage.c  ADM_transfer_dataset.c  ADM_transfer_datasets.c  ADM_transfer_datasets_user.c  ADM_update_adhoc_storage.c  ADM_update_job.c  ADM_update_pfs_storage.c  CMakeLists.txt  common.c  common.h  foo  foo.c
examples/cxx/: ADM_cancel_transfer.cpp  ADM_connect_data_operation.cpp  ADM_define_data_operation.cpp  ADM_deploy_adhoc_storage.cpp  ADM_finalize_data_operation.cpp  ADM_get_pending_transfers.cpp  ADM_get_qos_constraints.cpp  ADM_get_statistics.cpp  ADM_get_transfer_priority.cpp  ADM_in_situ_ops.cpp  ADM_in_transit_ops.cpp  ADM_link_transfer_to_data_operation.cpp  ADM_ping.cpp  ADM_register_adhoc_storage.cpp  ADM_register_job.cpp  ADM_register_pfs_storage.cpp  ADM_remove_adhoc_storage.cpp  ADM_remove_job.cpp  ADM_remove_pfs_storage.cpp  ADM_set_dataset_information.cpp  ADM_set_io_resources.cpp  ADM_set_qos_constraints.cpp  ADM_set_transfer_priority.cpp  ADM_tear_down_adhoc_storage.cpp  ADM_terminate_adhoc_storage.cpp  ADM_transfer_dataset.cpp  ADM_transfer_datasets.cpp  ADM_transfer_update.cpp  ADM_update_adhoc_storage.cpp  ADM_update_job.cpp  ADM_update_pfs_storage.cpp  CMakeLists.txt  common.cpp  common.hpp  ping.cpp
examples/deprecated/: ADM_adhoc_access.cpp  ADM_adhoc_background_flush.cpp  ADM_adhoc_context.cpp  ADM_adhoc_distribution.cpp  ADM_input.cpp
plugins/adhoc_services.d/: CMakeLists.txt  expand.sh  gekkofs.sh
plugins/slurm/: CMakeLists.txt  Makefile  README.md  defaults.h.in  scord_common.sh.in  scord_epilog.sh.in  scord_prolog.sh.in  slurmadmcli.c  slurmadmcli.txt  utils.c  utils.h
plugins/slurm/systemd/: cargo@.service.in
src/: CMakeLists.txt  main.cpp  scord  scord-ctl.cpp  scord.cpp  server.cpp  server.hpp  version.hpp.in
src/api/: CMakeLists.txt  admire.cpp  admire.h  admire.hpp  c_wrapper.cpp  errors.c
src/api/detail/: impl.cpp  impl.hpp
src/common/: CMakeLists.txt
src/common/abt_cxx/: CMakeLists.txt  shared_mutex.hpp
src/common/api/: CMakeLists.txt  admire_types.h  admire_types.hpp  convert.cpp  convert.hpp  errors.c  internal_types.hpp  types.c  types.cpp
src/common/api/scord/: internal_types.hpp  (+2 more)
src/common/config/: CMakeLists.txt  file_options.yml  genopts.yml.in  parsers.cpp  settings.hpp
src/common/logger/: CMakeLists.txt  logger.cpp  logger.h  logger.hpp  macros.h
src/common/net/: CMakeLists.txt  client.cpp  client.hpp  endpoint.cpp  endpoint.hpp  engine.hpp  request.hpp  serialization.hpp  server.cpp  server.hpp  utilities.hpp
src/common/network/: CMakeLists.txt  engine.hpp  server.cpp  server.hpp
src/common/utils/: CMakeLists.txt  c_ptr.hpp  ctype_ptr.hpp  signal_listener.hpp  utils.cpp  utils.hpp
src/config/: CMakeLists.txt  config.hpp  config_schema.hpp  defaults.cpp.in  defaults.hpp  keywords.hpp  parsers.cpp  parsers.hpp  settings.cpp  settings.hpp
src/config/file_options/: file_options.hpp  options_description.hpp  schema.hpp  yaml_parser.hpp
src/lib/: CMakeLists.txt  admire.cpp  admire.h  admire.hpp  admire_types.h  admire_types.hpp  c_wrapper.cpp  env.hpp  errors.c  libscord-user.c  libscord.cpp  types.c  types.cpp  types.h  types_private.h  utils.cpp
src/lib/detail/: impl.cpp  impl.hpp
src/lib/rpcs/: public.cpp  public.hpp
src/lib/scord/: scord-user.h  scord.h  scord.hpp  types.h  types.hpp  utils.h
src/logger/: CMakeLists.txt
src/network/: CMakeLists.txt  engine.hpp  rpcs.cpp  rpcs.hpp  server.cpp  server.hpp
src/network/detail/: address.hpp
src/rpcs/: CMakeLists.txt  public.cpp  public.hpp
src/scord/: CMakeLists.txt  adhoc_storage_manager.hpp  defaults.hpp.in  env.hpp  internal_types.cpp  internal_types.hpp  job_manager.hpp  pfs_storage_manager.hpp  rpc_handlers.cpp  rpc_handlers.hpp  rpc_server.cpp  rpc_server.hpp  scord.cpp  transfer_manager.hpp
src/scord-ctl/: CMakeLists.txt  command.cpp  command.hpp  config_file.cpp  config_file.hpp  defaults.hpp.in  env.hpp  rpc_handlers.cpp  rpc_handlers.hpp  rpc_server.cpp  rpc_server.hpp  scord-ctl.cpp  scord_ctl.cpp
src/scord-ctl/rpcs/: CMakeLists.txt  private.hpp
src/scord/rpcs/: CMakeLists.txt  private.cpp  private.hpp
src/utils/: CMakeLists.txt  signal_listener.hpp  utils.cpp
(+33 files in other folders)
